# APP-X11-Forward-win32-Development-Template-Stack

./: README.md  _config.yml  index.md
Base-Container/Afx-Base-Win32-Service/: .env  Dockerfile_App-Forward-X11-Win32_Base  compose_app_forward_x11_win32_base.yml
Howtos/: howto_create_a_dev_container.md
Sub-Containers/Afx-X11-Forward-win32-c-Service/: .env  Docker_Win32-C_Project  compose_win32-c_project.yml
Sub-Containers/Afx-X11-Forward-win32-c-Service/.devcontainer/: devcontainer.json
Sub-Containers/Afx-X11-Forward-win32-c-Service/Project-Templates/GUI-Application/: _backup  makefile  makefile64  makefile64.bak
Sub-Containers/Afx-X11-Forward-win32-c-Service/Project-Templates/GUI-Application/headers/: resource.h
Sub-Containers/Afx-X11-Forward-win32-c-Service/Project-Templates/GUI-Application/headers/views/: Win32Template.h
Sub-Containers/Afx-X11-Forward-win32-c-Service/Project-Templates/GUI-Application/resource/: Win32Template.aps  Win32Template.rc
Sub-Containers/Afx-X11-Forward-win32-c-Service/Project-Templates/GUI-Application/src/: stdafx.c  stdafx.h
Sub-Containers/Afx-X11-Forward-win32-c-Service/Project-Templates/GUI-Application/src/views/: Win32Template.c
Sub-Containers/Afx-X11-Forward-win32-cpp-Service/: .env  Docker_Win32-CPP_Project  compose_win32-cpp_project.yml
Sub-Containers/Afx-X11-Forward-win32-cpp-Service/Project-Templates/GUI-Application/: CMakeLists.txt  _backup
Sub-Containers/Afx-X11-Forward-win32-cpp-Service/Project-Templates/GUI-Application/headers/system/: WindowAPI.h  WindowAPI_Def.h  WindowDef.h  WindowDef.h.bak  WindowUtil.h
Sub-Containers/Afx-X11-Forward-win32-cpp-Service/Project-Templates/GUI-Application/headers/views/_main/: StartUp.h  WinMain.h
Sub-Containers/Afx-X11-Forward-win32-cpp-Service/Project-Templates/GUI-Application/headers/views/about/: AppAbout.h
Sub-Containers/Afx-X11-Forward-win32-cpp-Service/Project-Templates/GUI-Application/resource/: Resource.h
Sub-Containers/Afx-X11-Forward-win32-cpp-Service/Project-Templates/GUI-Application/src/views/_main/: StartUp.cpp  WinMain.cpp
assets/css/: style.scss
